src/App/App.scss
$mainColor: #0a192f;
$titleColor: #ccd6f6;
$subtitleColor: #8892b0;
$limeColor: #64ffda;
$cardColor: #112240;
$hoverColor: #233554;
$border-radius: 4px;
$--dark-navy: #020c1b;
$--navy: #0a192f;
$--light-navy: #112240;
$--lightest-navy: #233554;
$--navy-shadow: rgba(2, 12, 27, 0.7);
$--dark-slate: #495670;
$--slate: #8892b0;
$--light-slate: #a8b2d1;
$--lightest-slate: #ccd6f6;
$--white: #e6f1ff;
$--green: #64ffda;
$--green-tint: rgba(100, 255, 218, 0.1);
$--pink: #f57dff;
$--blue: #57cbff;
$--font-sans: "Calibre", "Inter", "San Francisco", "SF Pro Text", -apple-system, system-ui, sans-serif;
$--font-mono: "SF Mono", "Fira Code", "Fira Mono", "Roboto Mono", monospace;
$--fz-xxs: 12px;
$--fz-xs: 13px;
$--fz-sm: 14px;
$--fz-md: 16px;
$--fz-lg: 18px;
$--fz-xl: 20px;
$--fz-xxl: 22px;
$--fz-heading: 32px;
$--border-radius: 4px;
$--nav-height: 100px;
$--nav-scroll-height: 70px;
$--tab-height: 42px;
$--tab-width: 120px;
$--easing: cubic-bezier(0.645, 0.045, 0.355, 1);
$--transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
$--hamburger-width: 30px;
$--ham-before: top 0.1s ease-in 0.25s, opacity 0.1s ease-in;
$--ham-before-active: top 0.1s ease-out, opacity 0.1s ease-out 0.12s;
$--ham-after: bottom 0.1s ease-in 0.25s, transform 0.22s cubic-bezier(0.55, 0.055, 0.675, 0.19);
$--ham-after-active: bottom 0.1s ease-out, transform 0.22s cubic-bezier(0.215, 0.61, 0.355, 1) 0.12s;
$--fadein: fadein;
$--superfade: superfade;
$--barfade: barfade;
$--onappear: onAppear;

//---------------------------------------------//


$miniMobile: 390px;
$mobile: 480px;
$tablet: 768px;

@keyframes onAppear {
    0% {
        background-color: $--dark-navy;
    }
    100% {
        background-color: $--navy;
    }
}

@keyframes barfade {
    from {
        margin-bottom: 100vh;
        opacity: 0;
    }
    to {
        opacity: 1;
        margin-bottom: 0;
    }
}

@keyframes fadein {
    from {
        margin-bottom: 500px;
        opacity: 0;
        transform: scale(0) rotate(300deg);
    }
    to {
        opacity: 1;
        margin-bottom: 0;
        transform: scale(1) rotate(0deg);
    }
}

@keyframes superfade {
    from {
        filter: hue-rotate(0deg);
    }
    to {
        filter: hue-rotate(360deg);
    }
}

@mixin mobile {
    @media (max-width: #{$mobile}) {
        @content
    }
}

@mixin miniMobile {
    @media (max-width: #{$miniMobile}) {
        @content
    }
}

@mixin tablet {
    @media (max-width: #{$tablet}) {
        @content
    }
}

//---------------------------------------------//

.fade1 {
    animation: $--fadein 500ms;
    -webkit-animation: $--fadein 500ms;
    -moz-animation: $--fadein 500ms;
    -ms-animation: $--fadein 500ms;
    -o-animation: $--fadein 500ms;
}

.fade2 {
    animation: $--fadein 1000ms;
    -webkit-animation: $--fadein 1000ms;
    -moz-animation: $--fadein 1000ms;
    -ms-animation: $--fadein 1000ms;
    -o-animation: $--fadein 1000ms;
}

.fade3 {
    animation: $--fadein 1500ms;
    -webkit-animation: $--fadein 1500ms;
    -moz-animation: $--fadein 1500ms;
    -ms-animation: $--fadein 1500ms;
    -o-animation: $--fadein 1500ms;

}

.fade4 {
    animation: $--fadein 2000ms;
    -webkit-animation: $--fadein 2000ms;
    -moz-animation: $--fadein 2000ms;
    -ms-animation: $--fadein 2000ms;
    -o-animation: $--fadein 2000ms;
}

.fade5 {
    animation: $--fadein 2500ms;
    -webkit-animation: $--fadein 2500ms;
    -moz-animation: $--fadein 2500ms;
    -ms-animation: $--fadein 2500ms;
    -o-animation: $--fadein 2500ms;
}

.barfade {
    animation: $--barfade 5000ms ease;
    -webkit-animation: $--barfade 5000ms ease;
    -moz-animation: $--barfade 5000ms ease;
    -ms-animation: $--barfade 5000ms ease;
    -o-animation: $--barfade 5000ms ease;
}

.superfade {
    animation: $--superfade 5000ms;
    -webkit-animation: $--superfade 5000ms;
    -moz-animation: $--superfade 5000ms;
    -ms-animation: $--superfade 5000ms;
    -o-animation: $--superfade 5000ms;
}


._container {
    max-width: 1000px;
    width: 1000px;
    margin: 0 auto;
    box-sizing: content-box;
}

.wrapper {
    background-color: $--navy;
    min-height: 100%;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    //transition: $--transition;
    transition: background-color 1000ms linear;
    animation: .5s linear 0s 1 $--onappear;

    ._main-container {
        margin: 0 auto;
        box-sizing: content-box;
        max-width: 1000px;
        display: flex;
        justify-content: center;
        align-items: center;

        .main {
            flex: 1 1 auto;
            display: flex;
            justify-content: center;
            align-items: center;

            &--blur {
                filter: blur(5px) brightness(0.7);
                transition: $--transition;
                pointer-events: none;
                user-select: none;
            }
        }
    }
}

canvas {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 0;
    opacity: 0.5;
}

